syntax = "proto3";

package domain.link.v1;

import "google/protobuf/timestamp.proto";

message Link {
    // URL
    string url = 1;
    // Hash by URL + salt
    string hash = 2;
    // Describe of link
    string describe = 3;

    // Create at
    google.protobuf.Timestamp created_at = 4;
    // Update at
    google.protobuf.Timestamp updated_at = 5;
}

message Links {
    repeated Link link = 1;
}
